--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li ><a href="#">discounts</a></li>
                 <li ><a href="#">our partners</a></li>
                 <li><a href="#">about us</a></li>
+                <link rel="stylesheet" href="/css/footer.css">
             </ul>
         </div> 
     </nav>
@@ -79,7 +80,11 @@
         </div>
     </div>
 </container>
-
+<footer class="footer">
+    <p>© GEM PAINT CO </p>
+</footer>
+</main>
+</html>
   <!-- Llama el archivo de JavaScript externo -->
   <script src="/js.js"></script>
 </body>
