--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Enlaces a archivos CSS -->
   <link rel="stylesheet" href="./css/globals.css" />
   <link rel="stylesheet" href="./css/header_navbar.css">
-  <link rel="stylesheet" href="/css/mains.css">
+  <link rel="stylesheet" href="./css/mains.css">
   <link rel="stylesheet" href="./css/mediasq.css">
 </head>
 <body>
